src/test/compile-fail/use-meta-mismatch.rs
// error-pattern:can't find crate for 'std'

use std(complex(meta(item)));

fn main() { }
